# django-drifter

./: .gitignore  CHANGELOG.txt  README.md  pyproject.toml
src/drifter/: apps.py
src/drifter/management/commands/: redo_migration.py  revert_migration.py
src/migrationator/migrator/management/commands/: redo.py
src/migrator/: apps.py
src/migrator/management/commands/: redo_migration.py  reset_database.py  revert_migration.py
tests/: test_redo_migration.py  test_reset_database.py  test_revert_migration.py
tests/project/: settings.py  wsgi.py
tests/project/polls/: apps.py  models.py
tests/project/polls/migrations/: 0001_initial.py  0002_choice.py
